# Lygiagretus-egzaminas

./: CMakeLists.txt  README.md  build.bat  data1.json  data2.json  data3.json  data4.json  generate_data.py  kernel.cl  main.cpp  run.sh  run_test.bat  validate.py  worker.py
